<resources>
    <string name="app_name">BookFace</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="sign_up_prompt">Sign Up Here</string>

    <string name="login_prompt">Log in here</string>
    <string name="signup">Sign Up</string>
    <string name="contactNo">Contact No.</string>
    <string name="username">Username</string>

    <string name="available">Available</string>
    <string name="requested">Requested</string>
    <string name="accepted">Accepted</string>
    <string name="borrowed">Borrowed</string>

    <string name="myrequests">My Requests</string>
    <string name="title_activity_book_exchange">Map</string>
</resources>
